# local_ptr

./: .travis.yml  CMakeLists.txt  README.md
include/: local_ptr.hpp
test/: test.cpp
